@@ -8,6 +8,8 @@ import com.project.domain.circle.entity.Circle;
 import com.project.domain.circle.repository.CircleRepository;
 import com.project.domain.circlepin.entity.CirclePin;
 import com.project.domain.circlepin.repository.CirclePinRepository;
+import com.project.domain.location.entity.Location;
+import com.project.domain.location.repository.LocationRepository;
 import com.project.domain.picture.entity.Picture;
 import com.project.domain.picture.repository.PictureRepository;
 import com.project.domain.pin.dto.PinDTO;
@@ -24,7 +26,6 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -37,6 +38,7 @@ public class PinServiceImpl implements PinService {
     private final CirclePinRepository circlePinRepository;
     private final PinPictureRepository pinPictureRepository;
     private final S3Uploader s3Uploader;
+    private final LocationRepository locationRepository;
 
 
     @Override
@@ -46,27 +48,19 @@ public class PinServiceImpl implements PinService {
             Circle circle = circleRepository.findById(circleId).orElseThrow(
                     () -> new EntityNotFoundException("존재하지 않는 써클입니다."));
 
+            locationRepository.save(pin.getLocation());
             pin.setUser(user);
             pinRepository.save(pin);
 
-            for (MultipartFile picture : pictures) {
-                // S3에 사진 업로드
-                Map<String, String> result = s3Uploader.upload(picture, "static");
-                String pictureName = result.get("originalName");
-                String uploadUrl = result.get("uploadUrl");
+            // Pin - Circle 맵핑 정보 생성
+            circlePinRepository.save(CirclePin.builder().circle(circle).pin(pin).build());
 
-                // Picture 생성
-                Picture savedPicture = pictureRepository.save(Picture.builder().originalName(pictureName).url(uploadUrl).build());
-                pin.addPicture(savedPicture);
+            List<Picture> pictureList = uploadAndSavePictures(pictures);
 
-                // Pin - Picture 맵핑 정보 생성
-                pinPictureRepository.save(PinPicture.builder().pin(pin).picture(savedPicture).build());
+            // Pin - Picture 맵핑 정보 생성
+            pictureList.forEach((p) -> pinPictureRepository.save(PinPicture.builder().pin(pin).picture(p).build()));
 
-                // Pin - Circle 맵핑 정보 생성
-                circlePinRepository.save(CirclePin.builder().circle(circle).pin(pin).build());
-            }
-
-            return new PinDTO.PinDetailResponse(pin);
+            return new PinDTO.PinDetailResponse(pin, pictureList);
         } catch (ParseException e) {
             throw new InvalidValueException("핀을 생성하는 데 실패했습니다.", ErrorCode.INVALID_INPUT_VALUE);
         }
@@ -76,43 +70,59 @@ public class PinServiceImpl implements PinService {
     public PinDTO.PinDetailResponse getPinDetail(Users user, Long pinId) {
         Pin pin = pinRepository.findById(pinId).orElseThrow(
                 () -> new EntityNotFoundException("존재하지 않는 핀입니다."));
-        return new PinDTO.PinDetailResponse(pin);
+
+        List<Picture> pictureList = pinPictureRepository.findAllPicturesByPinId(pinId);
+        return new PinDTO.PinDetailResponse(pin, pictureList);
     }
 
     @Override
-    public List<PinDTO.PinDetailResponse> getAllPinByCircle(Long circleId) {
-        return pinRepository.findAllByCircleId(circleId).stream().map(PinDTO.PinDetailResponse::new).collect(Collectors.toList());
+    public PinDTO.PinDetailListResponse getAllPinsByCircle(Long circleId) {
+
+        // Pin을 모두 조회하고, 각 Pin에 존재하는 사진을 가져온다.
+        List<Pin> allPins = pinRepository.findAllByCircleId(circleId);
+        List<PinDTO.PinDetailResponse> pinDetailResponseList = allPins.stream().map((pin) -> {
+            List<Picture> pictureList = pinPictureRepository.findAllPicturesByPinId(pin.getId());
+            return new PinDTO.PinDetailResponse(pin, pictureList);
+        }).toList();
+
+        return new PinDTO.PinDetailListResponse(pinDetailResponseList);
     }
 
     @Override
-    public List<PinDTO.PinDetailResponse> getAllPinByMe(Users user) {
-        return pinRepository.findByUserId(user.getId()).stream().map(PinDTO.PinDetailResponse::new).collect(Collectors.toList());
+    public PinDTO.PinDetailListResponse getAllPinByMe(Users user) {
+        List<Pin> allPins = pinRepository.findByUserId(user.getId());
+        List<PinDTO.PinDetailResponse> pinDetailResponseList = allPins.stream().map((pin) -> {
+            List<Picture> pictureList = pinPictureRepository.findAllPicturesByPinId(pin.getId());
+            return new PinDTO.PinDetailResponse(pin, pictureList);
+        }).toList();
+
+        return new PinDTO.PinDetailListResponse(pinDetailResponseList);
+
     }
 
     @Override
-    public PinDTO.PinDetailResponse updatePin(Users user, PinDTO.PinUpdateRequest request) throws ParseException {
-        Long pinId = request.getPinId();
+    public PinDTO.PinDetailResponse updatePin(Users user, Long pinId, PinDTO.PinUpdateRequest request, List<MultipartFile> pictures) throws ParseException {
         Pin pin = pinRepository.findById(pinId).orElseThrow(() -> {
             log.error("Update pin failed. pinId = {} does not exist.", pinId);
             throw new EntityNotFoundException("존재하지 않는 핀입니다.");
         });
 
-        pin.setLocation(PinDTO.toPoint(request.getLocation()));
+        Location updatedLocation = request.getLocation().toEntity();
+        locationRepository.save(updatedLocation);
+        pin.updateTitle(request.getTitle());
+        pin.updateLocation(updatedLocation);
 
         // 사진 수정
-        List<MultipartFile> newPictureList = request.getPictures();
 
-        pin.getPictureList().clear();
+        // PinPicture에서 기존 매핑 삭제하고 새롭게 추가한다.
+        pinPictureRepository.deleteAll(pinPictureRepository.findAllByPinId(pinId));
 
-        newPictureList.forEach((picture) -> {
-            Map<String, String> result = s3Uploader.upload(picture, "static");
-            String pictureName = result.get("originalName");
-            String uploadUrl = result.get("uploadUrl");
+        List<Picture> pictureList = uploadAndSavePictures(pictures);
 
-            pin.addPicture(Picture.builder().originalName(pictureName).url(uploadUrl).build());
-        });
+        // Pin - Picture 맵핑 정보 생성
+        pictureList.forEach((p) -> pinPictureRepository.save(PinPicture.builder().pin(pin).picture(p).build()));
 
-        return new PinDTO.PinDetailResponse(pin);
+        return new PinDTO.PinDetailResponse(pin, pictureList);
     }
 
     @Override
@@ -127,5 +137,17 @@ public class PinServiceImpl implements PinService {
                 throw new EntityNotFoundException("존재하지 않는 핀입니다.");
             })
         );
+    }
+
+    public List<Picture> uploadAndSavePictures(List<MultipartFile> pictureList) {
+        return pictureList.stream().map((p) -> {
+            // S3에 사진 업로드
+            Map<String, String> result = s3Uploader.upload(p, "static");
+            String pictureName = result.get("originalName");
+            String uploadUrl = result.get("uploadUrl");
+
+            // Picture 생성
+            return pictureRepository.save(Picture.builder().originalName(pictureName).url(uploadUrl).build());
+        }).toList();
     }
 }
